<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="cUI.ui.main.AddMeeting.AddMeetingActivity">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="405dp"
            android:layout_height="204dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="160dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="32dp"
                    android:clickable="false"
                    android:elegantTextHeight="true"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/Date"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:textColorHint="@color/rose"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextTime"
                    android:layout_width="163dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="32dp"
                    android:clickable="false"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/Heure"
                    android:importantForAutofill="no"
                    android:inputType="time"
                    android:textColorHint="@color/rose"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

                <TextView
                    android:id="@+id/FindADateAndHoure"
                    android:layout_width="293dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/Find_a_date_and_a_houre"
                    android:elegantTextHeight="true"
                    android:fontFamily="@font/paprika"
                    android:gravity="center"
                    android:text="@string/Find_a_date_and_a_houre"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/editTextDate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.133" />

                <Button
                    android:id="@+id/buttonDate"
                    android:layout_width="140dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/Find_a_date"
                    android:labelFor="@+id/Date"
                    android:text="@string/button_Date"
                    app:iconTint="#00BCD4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.147"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/FindADateAndHoure"
                    tools:targetApi="o" />

                <Button
                    android:id="@+id/buttonHaour"
                    android:layout_width="137dp"
                    android:layout_height="59dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/button_haour"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/editTextTime"
                    app:layout_constraintHorizontal_bias="0.396"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonDate"
                    app:layout_constraintVertical_bias="0.136" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="399dp"
            android:layout_height="394dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:autofillHints=""
                android:padding="@dimen/_16sdp"
                android:ems="10"
                android:hint="@string/sujet_de_la_reunion"
                android:inputType="textPersonName" />

            <MultiAutoCompleteTextView
                android:id="@+id/multiAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:padding="@dimen/_12sdp"
                android:layout_weight="1"
                android:gravity="start"
                android:hint="@string/Email" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@android:string/ok" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>