<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="salle"
    android:textAlignment="center"
    app:constraint_referenced_tags="salle"
    tools:context="cUI.ui.main.Main.MainActivity">




    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerRoom"
                android:layout_width="114dp"
                android:layout_height="49dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/nom_de_la_salle"
                app:layout_constraintEnd_toStartOf="@+id/button_picker_date"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_picker_date"
                android:layout_width="74dp"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/Date"
                android:text="@string/Date"

                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editDate"
                android:layout_width="177dp"
                android:layout_height="45dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:hint="@string/Date"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonadd"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="52dp"
        android:clickable="true"
        android:contentDescription="@string/Flotingactionbutton"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add" />



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        tools:listitem="@layout/example_item" />



</androidx.constraintlayout.widget.ConstraintLayout>
